--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h2>Rendelhető fényképes ajándéktárgyak<br>- fotózás -</h2>
       <p class="header__text">A bölcsődei-, óvodai- vagy iskolai fotózás alkalmával készült képek megrendelhetőek különféle ajándéktárgyakon is,
         melyek az oldalon megtekinthetőek.<br>Rendeléshez kérlek használd az intézményben kapott megrendelőlapot!
-        <br><br>Amennyiben további információra lenne szükséged, vagy egyéb termékeimmel / szolgáltatásaimmal kapcsolatban
+        <br><br>Amennyiben további információra lenne szükséged vagy egyéb termékeimmel / szolgáltatásaimmal kapcsolatban
         érdeklődnél, keress elérhetőségeim bármelyikén!
       </p>
     </article>
