--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
       <div class="footer__phone">
         <div>
-          <h2 class="footer--increase">+36 30 475 8532</h2>
+          <p class="footer--increase">+36 30 475 8532</p>
         </div>
       </div>
     
