--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <img class="product__pic" src="assets/photo_mug.jpg" alt="Fényképes bögre">
         <h4>Fényképes bögre</h4>
         <p class="product__text">Fehér színű, kerámia bögre</p>
-        <p>egy oldalon nyomott</p>
-        <p>(300 ml)</p>
+        <p>egy nyomattal</p>
+        <p>(300 ml)</p><br>
       </div>
 
       <div class="product">
@@ -67,40 +67,39 @@
       <div class="product">
         <img class="product__pic" src="assets/magic_mug.jpg" alt="Varázsbögre">
         <h4>Varázsbögre</h4>
-        <p class="product__text">kék | rózsaszín | sárga</p>
+        <p class="product__text">Kék | Rózsaszín | Zöld</p>
         <p>(300 ml)</p>
-        <p>külseje matt fekete, mely magas hő hatására kifehéredik és láthatóvá válik a fotó</p>
+        <p>Külseje matt fekete, magas hő hatására kifehéredik és láthatóvá válik a fotó</p>
       </div>
 
       <div class="product">
         <img class="product__pic" src="assets/keychain.jpg" alt="Kulcstartó">
         <h4>Kulcstartó</h4>
-        <p class="product__text">Többféle</p>
-        <p>téglalap | szív</p>
-        <p>egy oldalon nyomott</p>
+        <p class="product__text">Többféle:</p>
+        <p>Egyoldalas műanyag | Kétoldalas műanyag | Díszdobozos fém</p>
       </div>
 
       <div class="product">
         <img class="product__pic" src="assets/magnet.jpg" alt="Hűtőmágnes">
         <h4>Hűtőmágnes</h4>
-        <p class="product__text">Többféle</p>
-        <p>téglalap | szív</p>
-        <p>(különféle anyagúak)</p>
+        <p class="product__text">Többféle:</p>
+        <p>Mágneslap | Műanyag  |  Fém</p>
       </div>
 
       <div class="product">
         <img class="product__pic" src="assets/puzzle.jpg" alt="Kirakó">
         <h4>Kirakó</h4>
-        <p class="product__text">Többféle</p>
-        <p>téglalap | szív</p>
+        <p class="product__text">Többféle:</p>
+        <p>16 x 11 cm | 20 x 14 cm   | 28 x 19 cm</p>
+        <p class="small-text">(A méretek a beszállítói készlettől függően minimálisan eltérhetnek!)</p>
       </div>
 
       <div class="product">
         <img class="product__pic" src="assets/mouse_pad.jpg" alt="Egérpad">
         <h4>Egérpad</h4>
-        <p class="product__text">Többféle</p>
-        <p>téglalap | szív</p>
-        <p>(Az egér nem tartozék!)</p>
+        <p class="product__text">Többféle:</p>
+        <p>Téglalap | Szív</p>
+        <p class="small-text">(Az egér nem tartozék!)</p>
       </div>
 
       <div class="product">
@@ -113,23 +112,26 @@
       <div class="product">
         <img class="product__pic" src="assets/canvas.jpg" alt="Vászonkép">
         <h4>Vászonkép</h4>
-        <p class="product__text">Vakráma kerere feszítve</p>
+        <p class="product__text">Vakráma keretre feszítve</p>
         <p>(20x30 cm)</p>
         <p>A kép szélei a keretre hajlanak, ha az nem tartalmaz fontos részletet!</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/mirror.jpg" alt="Tükör">
-        <h4>Sminktükör</h4>
-        <p class="product__text">Szív formájú</p>
-        <p>fémházas tükör</p>
+        <img class="product__pic" src="assets/mugpad.jpg" alt="Poháralátét">
+        <h4>Poháralátét</h4>
+        <p class="product__text">Többféle:</p>
+        <p>1 db | 4 db-os készlet</p>
+        <p class="small-text">(A 4 db-os szett egyforma vagy különböző képekkel is kérhető!)</p>
       </div>
 
       <div class="product">
         <img class="product__pic" src="assets/tshirt.jpg" alt="Póló">
         <h4>Fényképes póló</h4>
-        <p class="product__text">Fehér színű</p>
-        <p>100% pamut</p>
+        <p class="product__text">Fehér színű, 100% pamut póló</p>
+        <p>gyermek és felnőtt méretben</p>
+        <br>
+        <a class="size" target=”_blank” href="assets/size.pdf">Mérettáblázat</a>
       </div>
 
       <div class="product">
@@ -140,29 +142,27 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/kitchen_set.jpg" alt="Edényfogó">
-        <h4>Edényfogó / Konyhai szett</h4>
-        <p class="product__text  product__text--underline">Szett tartalma:</p>
-        <p>1 db edényfogó fotóval és 1 db kesztyű a képen látható mintával</p>
-        <p>A grafikán a felirat módosítható!</p>
-        <p>(Mama, Anya, Dédi, Keresztanyu, egyedi szöveg...)</p> 
-        <p>Az edényfogó önállóan is megvásárolható, a kesztyű csak szettben elérhető!</p>
+        <img class="product__pic" src="assets/airfreshener.jpg" alt="Illatosító">
+        <h4>Illatosító</h4>
+        <p class="product__text">Többféle:</p>
+        <p>Illóolajjal / parfümmel (újra)illatosítható.</p>
+        <p>Illatosítva vagy illatmentesen is kérhető!</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/photo_cube.jpg" alt="Fotókocka">
-        <h4>Fotókocka</h4>
-        <p class="product__text">6 db fotó számára</p>
-        <p>10x10 cm</p>
-        <p>1 db AA elemmel működik, mely nem tartozék!</p>
+        <img class="product__pic" src="assets/moneybank.jpg" alt="Persely">
+        <h4>Persely</h4>
+        <p class="product__text">Kerámia persely</p>
+        <p>alján kivehető dugóval</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/snowglobe.jpg" alt="Hógömb">
-        <h4>Hógömb</h4>
-        <p class="product__text">Többféle</p>
-        <p>két oldalas - egyforma vagy különböző képekkel</p>
-        <p>belsejében vízben lebegő szív vagy glitter található</p>
+        <img class="product__pic" src="assets/snowglobe.jpg" alt="Fotógömb">
+        <h4>Fotógömb</h4>
+        <p class="product__text">Többféle:</p>
+        <p>Szív | Glitter</p>
+        <p>Mindkét oldalán (egyforma vagy különböző) fotóval</p>
+        <p class="small-text">Belsejében vízben lebegő szív vagy glitter található</p>
       </div>
 
     </div>
