--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/mug_heart.jpg" alt="Fényképes bögre szív">
-        <h4>Fényképes bögre</h4>
-        <p class="product__text">Kerámia bögre</p>
-        <p>szív alakú füllel</p>
-        <p>(300 ml)</p>
+        <img class="product__pic" src="assets/mug_friends.jpg" alt="Fényképes bögre szív">
+        <h4>Páros bögre "Best friends"</h4>
+        <p class="product__text">2 db-os bögre szett</p>
+        <p>Egyik oldalán grafika, másik oldalán fotó</p>
+        <p>Fiús vagy lányos minta</p>
+        <p>A két bögre egyforma vagy két eltérő fotóval is kérhető</p>
       </div>
 
       <div class="product">
@@ -127,9 +128,10 @@
 
       <div class="product">
         <img class="product__pic" src="assets/tshirt.jpg" alt="Póló">
-        <h4>Fényképes póló</h4>
+        <h4>Fényképes póló "Best friends"</h4>
         <p class="product__text">Fehér színű, 100% pamut póló</p>
         <p>gyermek és felnőtt méretben</p>
+        <p>Fiús vagy lányos "kerettel"</p>
         <br>
         <a class="size" target=”_blank” href="assets/size.pdf">Mérettáblázat</a>
       </div>
