--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <img class="product__pic" src="assets/photo_mug.jpg" alt="Fényképes bögre">
         <h4>Fényképes bögre</h4>
         <p class="product__text">Fehér színű, kerámia bögre</p>
-        <p>Egy fényképpel</p>
+        <p>Egy fotóval</p>
         <p>300 ml</p><br>
       </div>
 
@@ -63,7 +63,7 @@
         <p>Egyik oldalán grafika ("best friends"), másikon fotó</p>
         <p>Választható:</p>
         <p>fiús vagy lányos mintával,</p>
-        <p>egyforma vagy eltérő fényképekkel</p>
+        <p>egyforma vagy eltérő képekkel</p>
       </div>
 
       <div class="product">
@@ -72,7 +72,7 @@
         <p class="product__text">Kék | Rózsaszín | Zöld</p>
         <p>300 ml</p>
         <p>Külseje matt fekete,</p>
-        <p>magas hő hatására kifehéredik és láthatóvá válik a fénykép</p>
+        <p>magas hő hatására kifehéredik és láthatóvá válik a kép</p>
       </div>
 
       <div class="product">
@@ -93,7 +93,7 @@
         <img class="product__pic" src="assets/puzzle.jpg" alt="Kirakó">
         <h4>Kirakó</h4>
         <p class="product__text">Többféle:</p>
-        <p>16 x 11 cm | 20 x 14 cm   | 28 x 19 cm</p>
+        <p>16 x 11 cm | 20 x 14 cm | 28 x 19 cm</p>
         <p class="small-text">(A termék pontos mérete a beszállítói készlettől függően a megadottól minimálisan eltérhet!)</p>
       </div>
 
