--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p class="product__text">Kék | Rózsaszín | Zöld</p>
         <p>300 ml</p>
         <p>Külseje matt fekete,</p>
-        <p>magas hő hatására kifehéredik és láthatóvá válik a kép</p>
+        <p>magas hő hatására kifehéredik és láthatóvá válik a minta</p>
       </div>
 
       <div class="product">
