--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <img class="product__pic" src="assets/mug_friends.jpg" alt="Fényképes bögre szív">
         <h4>Páros bögre szett</h4>
         <p class="product__text">A szett tartalma: 2 db kerámia bögre</p>
-        <p>Egyik oldalán grafika ("best friends"), másikon fotó</p>
+        <p>Egyik oldalán grafika ("best friends"), másikon fénykép</p>
         <p>Választható:</p>
         <p>fiús vagy lányos mintával,</p>
-        <p>egyforma vagy eltérő képekkel</p>
+        <p>egyforma vagy eltérő fotókkal</p>
       </div>
 
       <div class="product">
