--- a/index.html
+++ b/index.html
@@ -140,9 +140,11 @@
 
       <div class="product">
         <img class="product__pic" src="assets/shopper.jpg" alt="Táska">
-        <h4>Fényképes vászontáska</h4>
-        <p class="product__text">Fehér színű</p>
-        <p>Egy oldalon nyomott</p>
+        <h4>Vászontáska / tornazsák</h4>
+        <p class="product__text">Egy oldalon nyomott, többféle kivitelben:</p>
+        <p>- Vászon bevásárlótáska fotóval</p>
+        <p>- Tornazsák fotóval</p>
+        <p>- Tornazsák "Best friends" stílusban páros képpel</p>
       </div>
 
       <div class="product">
