--- a/index.html
+++ b/index.html
@@ -185,9 +185,10 @@
     
     <div class="notes">
       <p class="notes__text">Az oldalon található képek illusztrációk!</p>
-      <!--<img class="notes__hearticon" src="assets/heart_icon.png" alt="icon">
-      <p class="notes__hearttext">Szív formájú fényképet tartalmazó termékek esetén a kiválasztott képen legyen elegendő tér ahhoz, hogy  ne essen le fontos rész a tartalomból!</p>
-    >--></div>
+      <!--<img class="notes__hearticon" src="assets/heart_icon.png" alt="icon">-->
+      <p class="notes__hearttext">Bármilyen egyedi igény esetén érdeklődj!</p>
+      <br>
+    </div>
 
 
 
