--- a/index.html
+++ b/index.html
@@ -185,9 +185,8 @@
     
     <div class="notes">
       <p class="notes__text">Az oldalon található képek illusztrációk!</p>
-      <!--<img class="notes__hearticon" src="assets/heart_icon.png" alt="icon">-->
-      <p class="notes__hearttext">Bármilyen egyedi igény esetén érdeklődj!</p>
-      <br>
+      <p class="notes__question">Bármilyen egyedi igény esetén</p>
+      <a class="notes__calltext" href="http://m.me/szabocsilla.royalgraphic" target=”_blank”>érdeklődj!</a>
     </div>
 
 
