--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;600;800;900&family=Roboto+Serif&family=Roboto+Slab&family=Roboto:wght@100;300;400;500;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="shortcut icon" type="image/x-icon" href="assets/gift_icon.png">
  </head>
@@ -30,13 +30,20 @@
     </div>
 
     <article>
-      <h2>Rendelhető fényképes ajándéktárgyak<br>- fotózás -</h2>
+      <h2>Rendelhető fényképes ajándéktárgyak</h2>
+      <h3><br>- intézményi gyermekfotózás -</h3>
       <p class="header__text">A bölcsődei-, óvodai- vagy iskolai fotózás alkalmával készült képek megrendelhetőek különféle ajándéktárgyakon is,
         melyek az oldalon megtekinthetőek.<br>Rendeléshez kérlek használd az intézményben kapott megrendelőlapot!
         <br><br>Amennyiben további információra lenne szükséged vagy egyéb termékeimmel / szolgáltatásaimmal kapcsolatban
-        érdeklődnél, keress elérhetőségeim bármelyikén!
-      </p>
-    </article>
+        érdeklődnél, keress <a class="contact__link--inline" href="#contact">elérhetőségeim</a> bármelyikén!</p>
+    
+
+    <h5>Fontos információ:</h5>
+      <p class="header__text--warning">A fotózáson készült fényképek oldalaránya eltér a termékek <a class="cut__warning" target="_blank" href="assets/tajekoztato.pdf">nyomható felületétől,</a> 
+        ezért a kép széleinek egyes részei nem kerülnek megjelenítésre a gyártás során!<br>
+        Ezzel kapcsolatos konkrét kérésed jelezd számomra a megrendelőlapon! Köszönöm!</p>
+     
+     </article>
 
   </header>
 
