--- a/ajandektargyak.html
+++ b/ajandektargyak.html
@@ -56,7 +56,7 @@
     <div class="product-container">
 
       <div class="product">
-        <img class="product__pic" src="assets/photo_mug.jpg" alt="Fényképes bögre">
+        <img class="product__pic" src="assets/mug.jpg" alt="Fényképes bögre">
         <h4>Fényképes bögre</h4>
         <p class="product__text">Fehér színű, kerámia bögre</p>
         <p>Egy fotóval</p>
@@ -64,52 +64,78 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/mug_friends.jpg" alt="Fényképes bögre szív">
-        <h4>Páros bögre szett</h4>
-        <p class="product__text">A szett tartalma: 2 db kerámia bögre</p>
-        <p>Egyik oldalán grafika ("best friends"), másikon fénykép</p>
-        <p>Választható:</p>
-        <p>fiús vagy lányos mintával,</p>
-        <p>egyforma vagy eltérő fotókkal</p>
+        <img class="product__pic" src="assets/mug_golden.jpg" alt="Fényképes arany bögre szív">
+        <h4>Fényképes bögre</h4>
+        <p class="product__text">Belül gyöngyház arany színű</p>
+        <p>Egy fotóval</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/magic_mug.jpg" alt="Varázsbögre">
-        <h4>Varázsbögre</h4>
-        <p class="product__text">Kék | Rózsaszín | Zöld</p>
-        <p>300 ml</p>
-        <p>Külseje matt fekete,</p>
-        <p>magas hő hatására kifehéredik és láthatóvá válik a minta</p>
+        <img class="product__pic" src="assets/mug_xmas.jpg" alt="Fényképes mintás bögre">
+        <h4>Fényképes bögre</h4>
+        <p class="product__text">Belül karácsonyi mintával</p>
+        <p>Egy fotóval</p>
+      </div>
+
+      <div class="product">
+        <img class="product__pic" src="assets/magic_mug.jpg" alt="Fényképes varázsbögre">
+        <h4>Fényképes varázsbögre</h4>
+        <p class="product__text">Matt fekete vagy csillámos fekete</p>
+        <p>Egy fotóval</p>
+        <p class="small-text">Magas hő hatására válik láthatóvá rajta a minta!</p>
+      </div>
+
+      <div class="product">
+        <img class="product__pic" src="assets/bottle.jpg" alt="Fényképes kulacs">
+        <h4>Kulacs</h4>
+        <p class="product__text">Fém kulacs</p>
+        <p>Egy fotóval</p>
+      </div>
+
+      <div class="product">
+        <img class="product__pic" src="assets/coffee_mug.jpg" alt="Fényképes kávés csésze">
+        <h4>Kávés csésze</h4>
+        <p class="product__text">Csésze + alj  |  Csak csésze</p>
+        <p>Egy fotóval</p>
+        <p class="small-text">Az alj nyomatlan!</p>
+      </div>
+
+      <div class="product">
+        <img class="product__pic" src="assets/badge.jpg" alt="Fényképes kitűző">
+        <h4>Fényképes kitűző</h4>
+        <p class="product__text">32 mm | 58 mm</p>
+        <p>Egy fotóval</p>
+        <p classs="small-text">(Mágneses hátoldallal is elérhető!)</p>
+      </div>
+
+      <div class="product">
+        <img class="product__pic" src="assets/magnet_new.jpg" alt="Hűtőmágnes">
+        <h4>Hűtőmágnes</h4>
+        <p class="product__text">Többféle:</p>
+        <p>Mágneslap | Kitűző forma  |  Fém</p>
       </div>
 
       <div class="product">
         <img class="product__pic" src="assets/keychain.jpg" alt="Kulcstartó">
         <h4>Kulcstartó</h4>
         <p class="product__text">Többféle:</p>
-        <p>Egyoldalas műanyag | Kétoldalas műanyag | Díszdobozos fém</p>
+        <p>Műanyag | Díszdobozos fém</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/magnet.jpg" alt="Hűtőmágnes">
-        <h4>Hűtőmágnes</h4>
-        <p class="product__text">Többféle:</p>
-        <p>Mágneslap | Műanyag  |  Fém</p>
-      </div>
-
-      <div class="product">
-        <img class="product__pic" src="assets/puzzle.jpg" alt="Kirakó">
-        <h4>Kirakó</h4>
-        <p class="product__text">Többféle:</p>
-        <p>16 x 11 cm | 20 x 14 cm | 28 x 19 cm</p>
-        <p class="small-text">(A termék pontos mérete a beszállítói készlettől függően a megadottól minimálisan eltérhet!)</p>
-      </div>
-
-      <div class="product">
-        <img class="product__pic" src="assets/mouse_pad.jpg" alt="Egérpad">
+        <img class="product__pic" src="assets/mousepad.jpg" alt="Egérpad">
         <h4>Egérpad</h4>
-        <p class="product__text">Többféle:</p>
-        <p>Téglalap | Szív</p>
+        <p class="product__text">Téglalap (lekerekített sarokkal)</p>
+        <p>Ajánlott képformátum: fekvő</p>
         <p class="small-text">(Az egér nem tartozék!)</p>
+      </div>
+
+      <div class="product">
+        <img class="product__pic" src="assets/canvas.jpg" alt="Vászonkép">
+        <h4>Vászonkép</h4>
+        <p class="product__text">Vakráma keretre feszítve</p>
+        <p>20x30 cm  |  30x40 cm</p>
+        <p class="small-text">(A kép szélei a keretre hajlanak, ha az nem tartalmaz fontos részletet!)</p>
       </div>
 
       <div class="product">
@@ -120,54 +146,42 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/canvas.jpg" alt="Vászonkép">
-        <h4>Vászonkép</h4>
-        <p class="product__text">Vakráma keretre feszítve</p>
-        <p>20 x 30 cm</p>
-        <p class="small-text">(A kép szélei a keretre hajlanak, ha az nem tartalmaz fontos részletet!)</p>
+        <img class="product__pic" src="assets/kitchen_stuffs.jpg" alt="Konyhai szett">
+        <h4>Konyhai edényfogó és kesztyű</h4>
+        <p class="product__text">Edényfogó | Edényfogó és kesztyű szett</p>
+        <p class="small-text">(A kesztyű kérhető saját szöveges tartalommal kiegészítve is!)</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/mugpad.jpg" alt="Poháralátét">
-        <h4>Poháralátét</h4>
-        <p class="product__text">Többféle:</p>
-        <p>1 db | 4 db-os készlet</p>
-        <p class="small-text">(A 4 db-os szett egyforma vagy különböző képekkel is kérhető!)</p>
+        <img class="product__pic" src="assets/apron.jpg" alt="kötény">
+        <h4>Kötény</h4>
+        <p class="product__text">Fotóval</p>
+        <p class="small-text">(Kérhető saját szöveges tartalommal kiegészítve is!)</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/tshirt.jpg" alt="Póló">
-        <h4>Fényképes póló "Best friends"</h4>
-        <p class="product__text">Fehér színű, minőségi pamut póló</p>
-        <p>Gyermek- és felnőtt méretben</p>
-        <p>Fiús | Lányos</p>
-        <br>
-        <a class="size" target=”_blank” href="assets/size.pdf">Mérettáblázat</a>
-      </div>
-
-      <div class="product">
-        <img class="product__pic" src="assets/shopper.jpg" alt="Táska">
+        <img class="product__pic" src="assets/bags.jpg" alt="Táska">
         <h4>Vászontáska / tornazsák</h4>
         <p class="product__text">Egy oldalon nyomott, többféle kivitelben:</p>
         <p>- Vászon bevásárlótáska fotóval</p>
         <p>- Tornazsák fotóval</p>
-        <p>- Tornazsák "Best friends" stílusban páros képpel</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/airfreshener.jpg" alt="Illatosító">
-        <h4>Illatosító</h4>
-        <p class="product__text">Többféle:</p>
-        <p>Illóolajjal / parfümmel (újra)illatosítható.</p>
-        <p>Illatosítva vagy illatmentesen is kérhető!</p>
-        <p class="small-text">(Az illatosító formája véletlenszerűen kerül kiválasztásra!)</p>
+        <img class="product__pic" src="assets/clock.jpg" alt="Falióra">
+        <h4>Falióra</h4>
+        <p class="product__text">Kb. 30 cm átmérőjű falióra</p>
+        <p>Számlappal és fotóval</p>
+        <p> Üveg | MDF (fa)</p>
+        <p>(Az elem nem tartozék!)</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/moneybank.jpg" alt="Persely">
-        <h4>Persely</h4>
-        <p class="product__text">Kerámia persely</p>
-        <p>Alján kivehető dugóval</p>
+        <img class="product__pic" src="assets/calendar.jpg" alt="Naptár">
+        <h4>Naptár</h4>
+        <p class="product__text">Kb. 20x29 cm-es 1 oldalas, éves naptár</p>
+        <p>Többféle</p>
+        <p>Fiús | Lányos | Karácsonyi mintával</p>
       </div>
 
       <div class="product">
