--- a/ajandektargyak.html
+++ b/ajandektargyak.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;600;800;900&family=Roboto+Serif&family=Roboto+Slab&family=Roboto:wght@100;300;400;500;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/gift_icon.png">
+  <link rel="stylesheet" type="text/css" href="gifts.css">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/gifts/gift_icon.png">
  </head>
 
 <body>
@@ -22,7 +22,7 @@
     <a id="top"></a>
 
     <div class="header__logo">
-      <img class="logo" src="assets/header_logo.png" alt="logo">
+      <img class="logo" src="assets/gifts/header_logo.png" alt="logo">
     </div>
 
     <div>
@@ -56,7 +56,7 @@
     <div class="product-container">
 
       <div class="product">
-        <img class="product__pic" src="assets/mug.jpg" alt="Fényképes bögre">
+        <img class="product__pic" src="assets/gifts/mug.jpg" alt="Fényképes bögre">
         <h4>Fényképes bögre</h4>
         <p class="product__text">Fehér színű, kerámia bögre</p>
         <p>Egy fotóval</p>
@@ -64,21 +64,16 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/mug_golden.jpg" alt="Fényképes arany bögre szív">
-        <h4>Fényképes bögre</h4>
-        <p class="product__text">Belül gyöngyház arany színű</p>
+        <img class="product__pic" src="assets/gifts/mug_xmas.jpg" alt="Karácsonyi bögre">
+        <h4>Karácsonyi bögre</h4>
+        <p class="product__text">Többféle:</p>
+        <p>Belül karácsonyi mintával</p>
+        <p>Belül gyöngyház arany színnel</p>
         <p>Egy fotóval</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/mug_xmas.jpg" alt="Fényképes mintás bögre">
-        <h4>Fényképes bögre</h4>
-        <p class="product__text">Belül karácsonyi mintával</p>
-        <p>Egy fotóval</p>
-      </div>
-
-      <div class="product">
-        <img class="product__pic" src="assets/magic_mug.jpg" alt="Fényképes varázsbögre">
+        <img class="product__pic" src="assets/gifts/magic_mug.jpg" alt="Fényképes varázsbögre">
         <h4>Fényképes varázsbögre</h4>
         <p class="product__text">Matt fekete vagy csillámos fekete</p>
         <p>Egy fotóval</p>
@@ -86,14 +81,14 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/bottle.jpg" alt="Fényképes kulacs">
+        <img class="product__pic" src="assets/gifts/bottle.jpg" alt="Fényképes kulacs">
         <h4>Kulacs</h4>
         <p class="product__text">Fém kulacs</p>
         <p>Egy fotóval</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/coffee_mug.jpg" alt="Fényképes kávés csésze">
+        <img class="product__pic" src="assets/gifts/coffee_mug.jpg" alt="Fényképes kávés csésze">
         <h4>Kávés csésze</h4>
         <p class="product__text">Csésze + alj  |  Csak csésze</p>
         <p>Egy fotóval</p>
@@ -101,7 +96,7 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/badge.jpg" alt="Fényképes kitűző">
+        <img class="product__pic" src="assets/gifts/badge.jpg" alt="Fényképes kitűző">
         <h4>Fényképes kitűző</h4>
         <p class="product__text">32 mm | 58 mm</p>
         <p>Egy fotóval</p>
@@ -109,21 +104,21 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/magnet_new.jpg" alt="Hűtőmágnes">
+        <img class="product__pic" src="assets/gifts/magnet_new.jpg" alt="Hűtőmágnes">
         <h4>Hűtőmágnes</h4>
         <p class="product__text">Többféle:</p>
         <p>Mágneslap | Kitűző forma  |  Fém</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/keychain.jpg" alt="Kulcstartó">
+        <img class="product__pic" src="assets/gifts/keychain.jpg" alt="Kulcstartó">
         <h4>Kulcstartó</h4>
         <p class="product__text">Többféle:</p>
         <p>Műanyag | Díszdobozos fém</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/mousepad.jpg" alt="Egérpad">
+        <img class="product__pic" src="assets/gifts/mousepad.jpg" alt="Egérpad">
         <h4>Egérpad</h4>
         <p class="product__text">Téglalap (lekerekített sarokkal)</p>
         <p>Ajánlott képformátum: fekvő</p>
@@ -131,7 +126,7 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/canvas.jpg" alt="Vászonkép">
+        <img class="product__pic" src="assets/gifts/canvas.jpg" alt="Vászonkép">
         <h4>Vászonkép</h4>
         <p class="product__text">Vakráma keretre feszítve</p>
         <p>20x30 cm  |  30x40 cm</p>
@@ -139,28 +134,28 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/pillow.jpg" alt="Párna">
+        <img class="product__pic" src="assets/gifts/pillow.jpg" alt="Párna">
         <h4>Fényképes párna</h4>
         <p class="product__text">Egy oldalon nyomott párna, töltettel</p>
         <p>40 x 40 cm</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/kitchen_stuffs.jpg" alt="Konyhai szett">
+        <img class="product__pic" src="assets/gifts/kitchen_stuffs.jpg" alt="Konyhai szett">
         <h4>Konyhai edényfogó és kesztyű</h4>
         <p class="product__text">Edényfogó | Edényfogó és kesztyű szett</p>
         <p class="small-text">(A kesztyű kérhető saját szöveges tartalommal kiegészítve is!)</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/apron.jpg" alt="kötény">
+        <img class="product__pic" src="assets/gifts/apron.jpg" alt="kötény">
         <h4>Kötény</h4>
         <p class="product__text">Fotóval</p>
         <p class="small-text">(Kérhető saját szöveges tartalommal kiegészítve is!)</p>
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/bags.jpg" alt="Táska">
+        <img class="product__pic" src="assets/gifts/bags.jpg" alt="Táska">
         <h4>Vászontáska / tornazsák</h4>
         <p class="product__text">Egy oldalon nyomott, többféle kivitelben:</p>
         <p>- Vászon bevásárlótáska fotóval</p>
@@ -168,7 +163,7 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/clock.jpg" alt="Falióra">
+        <img class="product__pic" src="assets/gifts/clock.jpg" alt="Falióra">
         <h4>Falióra</h4>
         <p class="product__text">Kb. 30 cm átmérőjű falióra</p>
         <p>Számlappal és fotóval</p>
@@ -177,7 +172,7 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/calendar.jpg" alt="Naptár">
+        <img class="product__pic" src="assets/gifts/calendar.jpg" alt="Naptár">
         <h4>Naptár</h4>
         <p class="product__text">Kb. 20x29 cm-es 1 oldalas, éves naptár</p>
         <p>Többféle</p>
@@ -185,7 +180,16 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/snowglobe.jpg" alt="Fotógömb">
+        <img class="product__pic" src="assets/gifts/xmas_decor.jpg" alt="Karácsonyfadísz">
+        <h4>Karácsonyfadísz</h4>
+        <p class="product__text">Többféle:</p>
+        <p>Műanyag gömb vagy fém formadísz</p>
+        <p class="small-text">3 féle színben elérhető gömb (piros, ezüst, arany)</p>
+        <p class="small-text">Hópehely formájú dísz mindkét oldalán nyomattal</p>
+      </div>
+    
+      <div class="product">
+        <img class="product__pic" src="assets/gifts/snowglobe.jpg" alt="Fotógömb">
         <h4>Fotógömb</h4>
         <p class="product__text">Többféle:</p>
         <p>Szív | Glitter</p>
