--- a/ajandektargyak.html
+++ b/ajandektargyak.html
@@ -58,18 +58,11 @@
       <div class="product">
         <img class="product__pic" src="assets/gifts/mug.jpg" alt="Fényképes bögre">
         <h4>Fényképes bögre</h4>
-        <p class="product__text">Fehér színű, kerámia bögre</p>
-        <p>Egy fotóval</p>
-        <p>300 ml</p><br>
-      </div>
-
-      <div class="product">
-        <img class="product__pic" src="assets/gifts/mug_xmas.jpg" alt="Karácsonyi bögre">
-        <h4>Karácsonyi bögre</h4>
         <p class="product__text">Többféle:</p>
-        <p>Belül karácsonyi mintával</p>
-        <p>Belül gyöngyház arany színnel</p>
+        <p>Kerámia bögre  |  Műanyag bögre  |  Belül színes bögre</p>
         <p>Egy fotóval</p>
+        <p>300 ml</p>
+        <p class="small-text">Belül színes (gyöngyház): arany vagy ezüst</p>
       </div>
 
       <div class="product">
@@ -81,13 +74,6 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/gifts/bottle.jpg" alt="Fényképes kulacs">
-        <h4>Kulacs</h4>
-        <p class="product__text">Fém kulacs</p>
-        <p>Egy fotóval</p>
-      </div>
-
-      <div class="product">
         <img class="product__pic" src="assets/gifts/coffee_mug.jpg" alt="Fényképes kávés csésze">
         <h4>Kávés csésze</h4>
         <p class="product__text">Csésze + alj  |  Csak csésze</p>
@@ -96,14 +82,14 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/gifts/badge.jpg" alt="Fényképes kitűző">
-        <h4>Fényképes kitűző</h4>
-        <p class="product__text">32 mm | 58 mm</p>
+        <img class="product__pic" src="assets/gifts/bottle.jpg" alt="Fényképes kulacs">
+        <h4>Kulacs</h4>
+        <p class="product__text">Fém kulacs</p>
         <p>Egy fotóval</p>
-        <p classs="small-text">(Mágneses hátoldallal is elérhető!)</p>
+        <p class="small-text">A kép illusztráció! A kulacs pontos típusa eltérhet a képen látottól!</p>
       </div>
 
-      <div class="product">
+     <div class="product">
         <img class="product__pic" src="assets/gifts/magnet_new.jpg" alt="Hűtőmágnes">
         <h4>Hűtőmágnes</h4>
         <p class="product__text">Többféle:</p>
@@ -114,7 +100,8 @@
         <img class="product__pic" src="assets/gifts/keychain.jpg" alt="Kulcstartó">
         <h4>Kulcstartó</h4>
         <p class="product__text">Többféle:</p>
-        <p>Műanyag | Díszdobozos fém</p>
+        <p>Műanyag | Bőr  |  Díszdobozos fém (egyoldalas)</p>
+        <p class="small-text">A műanyag és bőr kérhető 2 oldalas nyomattal is extra díj ellenében!</p>
       </div>
 
       <div class="product">
@@ -136,22 +123,12 @@
       <div class="product">
         <img class="product__pic" src="assets/gifts/pillow.jpg" alt="Párna">
         <h4>Fényképes párna</h4>
-        <p class="product__text">Egy oldalon nyomott párna, töltettel</p>
+        <p class="product__text">Többféle:</p>
+        <P>Textil párna  |  Flitteres párna textil hátoldallal</P>
+        <p>Egy oldalon nyomott, töltettel</p>
         <p>40 x 40 cm</p>
-      </div>
-
-      <div class="product">
-        <img class="product__pic" src="assets/gifts/kitchen_stuffs.jpg" alt="Konyhai szett">
-        <h4>Konyhai edényfogó és kesztyű</h4>
-        <p class="product__text">Edényfogó | Edényfogó és kesztyű szett</p>
-        <p class="small-text">(A kesztyű kérhető saját szöveges tartalommal kiegészítve is!)</p>
-      </div>
-
-      <div class="product">
-        <img class="product__pic" src="assets/gifts/apron.jpg" alt="kötény">
-        <h4>Kötény</h4>
-        <p class="product__text">Fotóval</p>
-        <p class="small-text">(Kérhető saját szöveges tartalommal kiegészítve is!)</p>
+        <p class="small-text">A flitteres párna esetén a nyomat bármelyik oldalra kérhető!<br>
+          (Ha nem kerül külön jelölésre, a flitteres felére kerül a fotó!)</p>
       </div>
 
       <div class="product">
@@ -167,8 +144,8 @@
         <h4>Falióra</h4>
         <p class="product__text">Kb. 30 cm átmérőjű falióra</p>
         <p>Számlappal és fotóval</p>
-        <p> Üveg | MDF (fa)</p>
-        <p class="small-text">(Az elem nem tartozék!)</p>
+        <p> Anyaga: MDF</p>
+        <p class="small-text">(Az elem nem tartozék! 1db AA)</p>
       </div>
 
       <div class="product">
@@ -177,23 +154,25 @@
         <p class="product__text">Kb. 20x29 cm-es 1 oldalas, éves naptár</p>
         <p>Többféle</p>
         <p>Fiús | Lányos | Karácsonyi mintával</p>
+        <p>(A 2026-os grafika még szerkesztés alatt!)</p>
       </div>
 
       <div class="product">
         <img class="product__pic" src="assets/gifts/xmas_decor.jpg" alt="Karácsonyfadísz">
         <h4>Karácsonyfadísz</h4>
-        <p class="product__text">Többféle:</p>
-        <p>Műanyag gömb vagy fém formadísz</p>
-        <p class="small-text">3 féle színben elérhető gömb (piros, ezüst, arany)</p>
-        <p class="small-text">Hópehely formájú dísz mindkét oldalán nyomattal</p>
+        <p class="product__text">Műanyag gömbdísz</p>
+        <p>Többféle (vegyes színekben elérhető, a kép illusztráció!)</p>
+        <p class="small-text">Véletlenszerű színben kerül gyártásra!<br>
+        Amennyiben van preferált szín, kérlek jelezd és az elérhető raktárkészlettől függően
+        igyekszem szem előtt tartani kérésed!</p>
       </div>
     
       <div class="product">
         <img class="product__pic" src="assets/gifts/snowglobe.jpg" alt="Fotógömb">
         <h4>Fotógömb</h4>
         <p class="product__text">Többféle:</p>
-        <p>Szív | Glitter</p>
-        <p>Belsejében vízben lebegő szív vagy glitter található</p>
+        <p>Hó | Szív</p>
+        <p>Belsejében vízben lebegő hó vagy szív található</p>
         <p>Mindkét oldalán fotóval</p>
         <p class="small-text">(Egyforma vagy különböző képekkel.) </p>
        
