--- a/ajandektargyak.html
+++ b/ajandektargyak.html
@@ -158,12 +158,21 @@
       </div>
 
       <div class="product">
-        <img class="product__pic" src="assets/gifts/xmas_decor.jpg" alt="Karácsonyfadísz">
+        <img class="product__pic" src="assets/gifts/xmas_ball.jpg" alt="Karácsonyfadísz">
+        <h4>Karácsonyfadísz</h4>
+        <p class="product__text">Fém dísz</p>
+        <p>Csengettyű formájú fém karácsonyfadísz</p>
+        <p>Arany  |  Ezüst</p>
+        <p>Mindkét oldalán fotóval</p>
+      </div>
+
+      <div class="product">
+        <img class="product__pic" src="assets/gifts/xmas_ball.jpg" alt="Karácsonyfadísz">
         <h4>Karácsonyfadísz</h4>
         <p class="product__text">Műanyag gömbdísz</p>
         <p>Többféle (vegyes színekben elérhető, a kép illusztráció!)</p>
-        <p class="small-text">Véletlenszerű színben kerül gyártásra!<br>
-        Amennyiben van preferált szín, kérlek jelezd és az elérhető raktárkészlettől függően
+        <p>Véletlenszerű színben kerül gyártásra!<br>
+        <p class="small-text">Amennyiben van preferált szín, kérlek jelezd és az elérhető raktárkészlettől függően
         igyekszem szem előtt tartani kérésed!</p>
       </div>
     
