--- a/ajandektargyak.html
+++ b/ajandektargyak.html
@@ -58,18 +58,33 @@
       <div class="product">
         <img class="product__pic" src="assets/gifts/mug.jpg" alt="Fényképes bögre">
         <h4>Fényképes bögre</h4>
+        <p class="product__text">Kerámia bögre</p>
+        <p>Egy oldalon nyomott</p>
+        <p class="small-text">kb. 300 ml</p>
+      </div>
+
+      <div class="product">
+        <img class="product__pic" src="assets/gifts/plastic_mug.jpg" alt="Fényképes bögre">
+        <h4>Fényképes műanyag bögre</h4>
+        <p class="product__text">BPA mentes</p>
+        <p>Egy oldalon nyomott</p>
+        <p class="small-text">kb. 300 ml</p>
+      </div>
+
+      <div class="product">
+        <img class="product__pic" src="assets/gifts/mug-gold_silver.jpg" alt="Fényképes bögre">
+        <h4>Belül színes bögre</h4>
         <p class="product__text">Többféle:</p>
-        <p>Kerámia bögre  |  Műanyag bögre  |  Belül színes bögre</p>
-        <p>Egy fotóval</p>
-        <p>300 ml</p>
-        <p class="small-text">Belül színes (gyöngyház): arany vagy ezüst</p>
+        <p>Arany  |  Ezüst</p>
+        <p>Egy oldalon nyomott</p>
+        <p class="small-text">Belseje gyöngyház arany vagy ezüst színű</p>
       </div>
 
       <div class="product">
         <img class="product__pic" src="assets/gifts/magic_mug.jpg" alt="Fényképes varázsbögre">
         <h4>Fényképes varázsbögre</h4>
-        <p class="product__text">Matt fekete vagy csillámos fekete</p>
-        <p>Egy fotóval</p>
+        <p class="product__text">Matt fekete  |  Csillámos fekete</p>
+        <p>Egy nyomattal</p>
         <p class="small-text">Magas hő hatására válik láthatóvá rajta a minta!</p>
       </div>
 
@@ -77,16 +92,16 @@
         <img class="product__pic" src="assets/gifts/coffee_mug.jpg" alt="Fényképes kávés csésze">
         <h4>Kávés csésze</h4>
         <p class="product__text">Csésze + alj  |  Csak csésze</p>
-        <p>Egy fotóval</p>
-        <p class="small-text">Az alj nyomatlan!</p>
+        <p>A csésze egyik oldalán fotóval,</p>
+        <p class="small-text">az alj nyomatlan!</p>
       </div>
 
       <div class="product">
         <img class="product__pic" src="assets/gifts/bottle.jpg" alt="Fényképes kulacs">
         <h4>Kulacs</h4>
         <p class="product__text">Fém kulacs</p>
-        <p>Egy fotóval</p>
-        <p class="small-text">A kép illusztráció! A kulacs pontos típusa eltérhet a képen látottól!</p>
+        <p>Egy oldalon nyomott - névvel is kérhető!</p>
+        <p class="small-text">A kép illusztráció!<br>A kulacs pontos típusa eltérhet a képen látottól!</p>
       </div>
 
      <div class="product">
@@ -125,8 +140,8 @@
         <h4>Fényképes párna</h4>
         <p class="product__text">Többféle:</p>
         <P>Textil párna  |  Flitteres párna textil hátoldallal</P>
-        <p>Egy oldalon nyomott, töltettel</p>
-        <p>40 x 40 cm</p>
+        <p>Egy oldalon nyomott</p>
+        <p>40 x 40 cm párna, töltettel</p>
         <p class="small-text">A flitteres párna esetén a nyomat bármelyik oldalra kérhető!<br>
           (Ha nem kerül külön jelölésre, a flitteres felére kerül a fotó!)</p>
       </div>
@@ -144,8 +159,15 @@
         <h4>Falióra</h4>
         <p class="product__text">Kb. 30 cm átmérőjű falióra</p>
         <p>Számlappal és fotóval</p>
-        <p> Anyaga: MDF</p>
+        <p>Anyaga: MDF</p>
         <p class="small-text">(Az elem nem tartozék! 1db AA)</p>
+      </div>
+
+      <div class="product">
+        <img class="product__pic" src="assets/gifts/metal_box.jpg" alt="Falióra">
+        <h4>Fém doboz</h4>
+        <p class="product__text">Kb. 18x11x5 cm-es fém doboz</p>
+        <p>Fedelén fotóval</p>
       </div>
 
       <div class="product">
@@ -154,26 +176,26 @@
         <p class="product__text">Kb. 20x29 cm-es 1 oldalas, éves naptár</p>
         <p>Többféle</p>
         <p>Fiús | Lányos | Karácsonyi mintával</p>
-        <p>(A 2026-os grafika még szerkesztés alatt!)</p>
+        <p>(A 2026-os grafika szerkesztés alatt!)</p>
       </div>
 
       <div class="product">
         <img class="product__pic" src="assets/gifts/xmas_ball.jpg" alt="Karácsonyfadísz">
+        <h4>Karácsonyfadísz</h4>
+        <p class="product__text">Műanyag gömbdísz fotóval</p>       
+        <p>Véletlenszerű színben kerül gyártásra!<br>
+        <p class="small-text">Amennyiben van preferált típus, kérlek jelezd és az elérhető raktárkészlettől függően
+        igyekszem szem előtt tartani kérésed!</p>
+        <p>(Vegyes színekben elérhető, a kép illusztráció!)</p>
+      </div>
+
+      <div class="product">
+        <img class="product__pic" src="assets/gifts/xmas_decor_metal.jpg" alt="Karácsonyfadísz">
         <h4>Karácsonyfadísz</h4>
         <p class="product__text">Fém dísz</p>
-        <p>Csengettyű formájú fém karácsonyfadísz</p>
         <p>Arany  |  Ezüst</p>
-        <p>Mindkét oldalán fotóval</p>
-      </div>
-
-      <div class="product">
-        <img class="product__pic" src="assets/gifts/xmas_ball.jpg" alt="Karácsonyfadísz">
-        <h4>Karácsonyfadísz</h4>
-        <p class="product__text">Műanyag gömbdísz</p>
-        <p>Többféle (vegyes színekben elérhető, a kép illusztráció!)</p>
-        <p>Véletlenszerű színben kerül gyártásra!<br>
-        <p class="small-text">Amennyiben van preferált szín, kérlek jelezd és az elérhető raktárkészlettől függően
-        igyekszem szem előtt tartani kérésed!</p>
+        <p>Csengettyű formájú fém karácsonyfadísz</p>
+        <p>Mindkét oldalán fotóval!</p>
       </div>
     
       <div class="product">
